# sistema-de-matriculas

./: README.md
Artefatos/Diagramas/: diagrama-de-caso-de-uso.asta  diagrama-de-classes.asta
Codigo/backend/: README.md  pyproject.toml
Codigo/backend/backend/: cursos.json  disciplinas.json  main.py  util.py
Codigo/backend/backend/controller/: aluno_controller.py  financeiro_controller.py  login_controller.py  matricula_controller.py  professor_controller.py  secretario_controller.py  usuario_controller.py
Codigo/backend/backend/database/: cursos.json  disciplinas.json  usuarios.json
Codigo/backend/backend/model/: __init__.py  aluno.py  curso.py  disciplina.py  financeiro.py  matricula.py  professor.py  secretario.py  semestre.py  usuario.py
Codigo/backend/backend/models/: __init__.py  aluno.py  curso.py  disciplina.py  professor.py  semestre.py  usuario.py
Codigo/backend/backend/view/: aluno_view.py  financeiro_view.py  login_view.py  matricula_view.py  professor_view.py  secretario_view.py
Documentacao/Diagramas/: diagrama-de-classes.asta  diagrama-de-classes.png.bak
