[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["marcusvco <marcuscarvalhodeoliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
